added leetspeak module

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,6 @@
 {
-    "swear": true,
-    "lol": false,
-    "goodboy": true
+	"swear": true,
+	"lol": false,
+	"goodboy": true,
+	"leetspeak": true
 }
